# raiko

./: . gitmodules  .dockerignore  .env  .gitignore  .gitmodules  .typos.toml  BLOB_ENCODING.md  CHANGELOG.md  CRITICAL_MIGRATION_CHANGES.md  Cargo.toml  Cargo.toml.backup  Dockerfile  Dockerfile.mock  Dockerfile.nitro  Dockerfile.pccs  Dockerfile.zk  PROVING_MIGRATION.md  README.md  README_Docker.md  README_Docker_and_RA.md  README_Metrics.md  README_RA.md  README_Raiko.md  README_SGX.md  RELEASE.md  _typos.toml  decompress.go  makefile  prove_block.sh  raiko.openapi.json  run_bonsai.sh  rust-toolchain  taiko.toml  test.json  toolchain.sh
core/: Cargo.toml  Dockerfile  compressed_blob.hex  input-taiko_mainnet-182300.json
core/benches/: proving.rs
core/benches/fixtures/: shasta_agg_input.json
core/src/: interfaces.rs  lib.rs  preflight.rs  prover.rs  tests.rs  utils.rs
core/src/preflight/: hekla.rs  lru.rs  mod.rs  ontake.rs  reth_preflight.rs  sidecar.rs  util.rs
core/src/provider/: boost_rpc.rs  db.rs  ipc.rs  mod.rs  persistent_map.rs  preflight_rpc.rs  rpc.rs
gateway/: Cargo.toml
gateway/src/: config.rs  lib.rs  main.rs  router.rs  shasta.rs
guests/eth-block/: Cargo.toml  eth-block.manifest.template
guests/eth-block/src/: main.rs
guests/sp1/program/: Cargo.toml
harness/core/: Cargo.toml
harness/core/src/: assert.rs  lib.rs
harness/macro/: Cargo.toml
harness/macro/src/: lib.rs
host/: Cargo.toml  Dockerfile  make_prove_request_taiko_mainnet_native_780758_0.json  nitro_host.service
host/config/: chain_spec_list_default.json  chain_spec_list_devnet.json  chain_spec_list_masaya.json  config.devnet.json  config.docker.json  config.json  config.sgx.json  config.taiko_hekla.json  config.taiko_hoodi.json  config.taiko_mainnet.json  config.taiko_masaya.json  config.taiko_shasta.json  docker_config.toml
host/config/devnet/: .env.example  README.md  chain_spec_list.json  chain_spec_list_default.json  config.json  set-dcap-params.sh  set-image-id-trusted.sh  set-program-trusted.sh
host/config/testnet/: chain_spec_list.json  config.json
host/src/: cache.rs  docs.rs  error.rs  execution.rs  interfaces.rs  lib.rs  main.rs  metrics.rs  preflight.rs  proof.rs  provider_db.rs  raiko.rs  request.rs  rpc_provider.rs  server.rs
host/src/host/: host.rs  mod.rs  preflight.rs  provider_db.rs
host/src/interfaces/: error.rs  request.rs
host/src/prover/: cache.rs  context.rs  error.rs  execution.rs  mod.rs  request.rs  server.rs
host/src/provider/: db.rs  mod.rs  rpc.rs
host/src/server/: auth.rs  handler.rs  logging.rs  metrics.rs  mod.rs  utils.rs  worker.rs
host/tests/: lib.rs  proof_request.rs
host/tests/common/: chain.rs  client.rs  mod.rs  request.rs  scenarios.rs  server.rs  setup.rs
host/tests/test/: admin_test.rs  aggregate_test.rs  ballot_test.rs  cancel_test.rs  debug_test.rs  manual_test.rs  mod.rs  prove_test.rs
lib/: Cargo.toml  build.rs  chain_spec.json
lib/no-op-kzg/: Cargo.toml
lib/no-op-kzg/src/: lib.rs
lib/src/: anchor.rs  block_builder.rs  builder.rs  consts.rs  execution.rs  input.rs  lib.rs  libhash.rs  mem_db.rs  preparation.rs  proof.rs  proof_type.rs  proof_type_v2.rs  protocol_instance.rs  prover.rs  prover_util.rs  signature.rs  taiko.rs  taiko_utils.rs  utils.rs
lib/src/builder/: execute.rs  finalize.rs  initialize.rs  mod.rs  prepare.rs
lib/src/execution/: ethereum.rs  mod.rs  optimism.rs  taiko.rs
lib/src/host/: mod.rs  provider_db.rs  taiko.rs
lib/src/input/: hekla.rs  ontake.rs  pacaya.rs  realtime.rs  shasta.rs
lib/src/macros/: cfg.rs  mod.rs
lib/src/manifest/: codec.rs  mod.rs  types.rs
lib/src/primitives/: eip4844.rs  keccak.rs  mod.rs  mpt.rs  revm.rs
lib/src/taiko/: blob_utils.rs  block_builder.rs  execute.rs  execution.rs  host.rs  input.rs  mod.rs  precheck.rs  preparation.rs  prepare.rs  protocol_instance.rs  utils.rs  verify.rs
lib/src/utils/: blobs.rs  txs.rs  (+5 more)
methods/guest/: Cargo.toml
mock-gateway/: Cargo.toml  build.rs
mock-gateway/src/: default_rule.rs  generated.rs  lib.rs  main.rs  router.rs  state.rs
mock-gateway/tests/: mock_gateway_test.rs
mock-studio/: Cargo.toml
mock-studio/src/: api_spec.rs  app.rs  generator.rs  lib.rs  main.rs  models.rs  openrouter.rs  runner.rs  store.rs
mock-studio/tests/: ticket_flow_test.rs
patches/alloy-signer-aws/: Cargo.toml
patches/alloy-signer-local/: Cargo.toml
pipeline/: Cargo.toml
pipeline/builder/: Cargo.toml  build.rs  proof-with-pis.json
pipeline/example/: Cargo.toml
pipeline/example-sp1/: Cargo.toml
pipeline/examples/: Cargo.toml
pipeline/harness/: Cargo.toml
pipeline/src/: builder.rs  executor.rs  lib.rs  risc0.rs  risc0_util.rs  sp1_util.rs
primitives/: Cargo.toml
primitives/src/: block.rs  eip4844.rs  ethers.rs  keccak.rs  lib.rs  mpt.rs  revm.rs  signature.rs
provers/risc0/: Cargo.toml  build.rs  rust-toolchain.toml  utils.rs
raiko-guest/: Cargo.toml  raiko-guest.manifest.template
raiko-guest/config/: csr.pem  default.json  file.crt  private.pem  raiko-guest.manifest.template
raiko-guest/src/: app_args.rs  main.rs  one_shot.rs  ratls_server.rs  signature.rs
raiko-guests/risc0/: Cargo.toml  build.rs
raiko-host/: Cargo.toml
raiko-host/config/: docker_config.toml
raiko-host/src/: lib.rs  log.rs  main.rs  metrics.rs  rolling.rs  shit.rs
raiko-host/testdata/: config.toml
raiko2/: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.raiko2  README.md
raiko2/docs/: API.md  DESIGN.md  MIGRATION.md  PLAN.md  RAIKO2-PROGRESS.md  migration-plan.md
raiko2/script/: build-guest.sh
reqactor/: Cargo.toml
reqactor/src/: action.rs  actor.rs  actor_inner.rs  backend.rs  gateway.rs  lib.rs  queue.rs
reqpool/: Cargo.toml
reqpool/src/: backend.rs  config.rs  lib.rs  macros.rs  memory_backend.rs  memory_pool.rs  mock.rs  pool.rs  redis_pool.rs  request.rs  traits.rs  utils.rs
task_manager/: Cargo.toml
task_manager/src/: adv_sqlite.rs  lib.rs  mem_db.rs
task_manager/tests/: main.rs
taskdb/: Cargo.toml
taskdb/src/: adv_sqlite.rs  lib.rs  mem_db.rs  redis.rs  redis_db.rs
taskdb/tests/: main.rs
(+729 files in other folders)
