[workspace]
resolver = "2"
members = [
    "lib",
    "host",
    "primitives",
    "provers/sp1/driver",
    "provers/sp1/builder",
    "provers/risc0/driver",
    "provers/risc0/builder",
    "provers/sgx/prover",
    "provers/sgx/guest", 
    "provers/sgx/setup",
    "pipeline",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]

# raiko
raiko-lib = { path = "./lib", features = ["std"] }
raiko-primitives = { path = "./primitives" }

# revm
revm-primitives = { git = "https://github.com/taikoxyz/revm.git", branch = "feat/zk-op", default-features = false }
revm = { git = "https://github.com/taikoxyz/revm.git", branch = "feat/zk-op", default-features = false, features = [
    "serde",
    "std",
    "taiko",
] }

# risc zero
risc0-zkvm = { version = "0.21.0", features = ["prove", "getrandom"] }
bonsai-sdk = { version = "0.7.0", features = ["async"] }
risc0-build = { version = "0.21.0" }
risc0-binfmt = { version = "0.21.0" }

# SP1
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }

# alloy
alloy-rlp = { version = "0.3.4", default-features = false }
alloy-rlp-derive = { version = "0.3.4", default-features = false }
alloy-core = { version = "0.7.1", default-features = false }
alloy-dyn-abi = { version = "0.7.1", default-features = false }
alloy-json-abi = { version = "0.7.1", default-features = false }
alloy-primitives = { version = "0.7.1", default-features = false }
alloy-sol-types = { version = "0.7.1", default-features = false }
alloy-rpc-types = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e" }
alloy-rpc-client = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e" }
alloy-consensus = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e", features = [
    "serde",
] }
alloy-network = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e", features = [
    "k256",
] }
alloy-contract = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e" }
alloy-eips = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e", features = [
    "serde",
] }
alloy-provider = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e" }
alloy-transport-http = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e" }
alloy-signer = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e" }
alloy-signer-wallet = { git = "https://github.com/brechtpd/alloy", branch = "175_4e22b9e" }

# ethers (TODO: remove)
ethers-contract = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" }
ethers-core = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" }
ethers-providers = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" }

# serde
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.0" }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# memory
cap = { git = "https://github.com/brechtpd/cap", branch = "more-stats", features = [
    "stats",
] }

# server
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
structopt = "0.3.24"
prometheus = { version = "0.13.3", features = ["process"] }

# crypto
c-kzg = "1.0.0"
c-kzg-taiko = { git = "https://github.com/smtmfft/c-kzg-4844", branch = "for-alpha7", default-features = false, features = [
    "preload-kzg-settings",
] }
sha3 = { version = "0.10", default-features = false }
sha2 = "0.10.8"
secp256k1 = { version = "0.27.0", features = [
    'global-context',
    "rand",
    "recovery",
] }

# misc
hashbrown = { version = "0.14", features = ["inline-more"] }
tempfile = "3.8"
anyhow = "1.0"
bincode = "1.3.3"
bytemuck = "1.13"
cargo_metadata = "0.12.1"
clap = { version = "4.4.6", features = ["derive", "string", "env"] }
flate2 = "1.0.28"
tokio = { version = "^1.23", features = ["full"] }
hyper = { version = "0.14.27", features = ["server"] }
lru_time_cache = "0.11.11"
lazy_static = "1.4.0"
once_cell = "1.8.0"
thiserror = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
reqwest_alloy = { package = "reqwest", version = "0.12.4", features = ["json"] }
proptest = "1.4.0"
rlp = "0.5.2"
url = "2.5.0"
cfg-if = "1.0.0"
libflate = { version = "2.0.0" }
log = { version = "0.4.13" }
env_logger = { version = "0.11.3" }
typetag = { version = "0.2.15" }
hex = { version = "0.4.3" }
thiserror-no-std = "2.0.2"
chrono = { version = "0.4", default-features = false }
hex-literal = "0.4"
assert_cmd = "2.0"
regex = "1.5.4"
rstest = "0.18"
rand = "0.8.5"
rand_core = "0.6.4"
base64-serde = "0.7.0"
base64 = "0.21.7"
dirs = "5.0.1"
criterion = "0.3.5"
