[workspace]
resolver = "2"
members = [
    "lib",
    "host",
    "harness/core",
    "harness/macro",
    "provers/sp1/driver",
    "provers/sp1/builder",
    "provers/risc0/driver",
    "provers/risc0/builder",
    "provers/sgx/prover",
    "provers/sgx/guest",
    "provers/sgx/setup",
    "pipeline",
    "core",
    "taskdb",
    "redis-derive",
    "reqpool",
    "reqactor",
    "ballot",
]

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[workspace.dependencies]

# raiko
raiko-lib = { path = "./lib", features = ["std"] }
raiko-core = { path = "./core" }
raiko-tasks = { path = "./taskdb" }
raiko-redis-derive = { path = "./redis-derive" }
raiko-reqpool = { path = "./reqpool" }
raiko-reqactor = { path = "./reqactor" }
raiko-ballot = { path = "./ballot" }

# reth
reth-primitives = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko-shasta", default-features = false, features = [
    "alloy-compat",
    "taiko",
    "k256",
] }
reth-evm-ethereum = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko-shasta", default-features = false }
reth-evm = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko-shasta", default-features = false }
reth-rpc-types = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko-shasta", default-features = false }
reth-revm = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko-shasta", default-features = false }
reth-chainspec = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko-shasta", default-features = false, features = [
    "taiko",
] }
reth-provider = { git = "https://github.com/taikoxyz/taiko-reth.git", branch = "v1.0.0-rc.2-taiko-shasta", default-features = false }

# risc zero
risc0-zkvm = { version = "3.0.3", features = ["prove", "getrandom"] }
bonsai-sdk = { version = "=1.4.1" }
risc0-binfmt = { version = "=3.0.2" }
risc0-zkos-v1compat = { version = "=2.2.0" }

# SP1
sp1-sdk = { version = "=5.0.2" }
sp1-prover = { version = "=5.0.1" }
sp1-zkvm = { version = "=5.0.0" }
sp1-helper = { version = "=5.0.0" }
sp1-primitives = { version = "=5.0.0" }

# alloy
alloy-rlp = { version = "0.3.4", default-features = false }
alloy-rlp-derive = { version = "0.3.4", default-features = false }
alloy-core = { version = "0.7.2", default-features = false }
alloy-dyn-abi = { version = "0.7.2", default-features = false }
alloy-json-abi = { version = "0.7.2", default-features = false }
alloy-primitives = { version = "0.7.2", default-features = false }
alloy-sol-types = { version = "0.7.2", default-features = false }
reqwest_alloy = { package = "reqwest", version = "0.12.4", features = ["json"] }
alloy-rpc-types = { version = "0.1", default-features = false }
alloy-rpc-client = { version = "0.1", default-features = false }
alloy-consensus = { version = "0.1", default-features = false, features = [
    "serde",
] }
alloy-network = { version = "0.1", default-features = false, features = [
    "k256",
] }
alloy-contract = { version = "0.1", default-features = false }
alloy-eips = { version = "0.1", default-features = false, features = ["serde"] }
alloy-provider = { version = "0.1", default-features = false, features = [
    "reqwest",
] }
alloy-transport-http = { version = "0.1", default-features = false, features = [
    "reqwest",
] }
alloy-signer = { version = "0.1", default-features = false }
alloy-signer-local = { version = "0.1", default-features = false }

# ethers (TODO: remove)
ethers-contract = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" }
ethers-core = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" }
ethers-providers = { git = "https://github.com/smtmfft/ethers-rs", branch = "ethers-core-2.0.10" }

# Conversion, serialization, codecs, compression
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.0" }
bincode = "1.3.3"
bytemuck = "1.13"
flate2 = "1.0.28"
rlp = "0.5.2"
hex = { version = "0.4.3" }
hex-literal = "0.4"
base64-serde = "0.7.0"
base64 = "0.22.1"
libflate = { version = "2.0.0" }
typetag = { version = "0.2.15" }
num_enum = "0.7.2"

# tracing, logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = { version = "0.4.13" }
env_logger = { version = "0.11.3" }

# memory
cap = { git = "https://github.com/brechtpd/cap", branch = "more-stats", features = [
    "stats",
] }

# async, server, http queries
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-scalar = { version = "0.1.0", features = ["axum"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
structopt = "0.3.24"
prometheus = { version = "0.13.3", features = ["process"] }
tokio = { version = "^1.23", features = ["full"] }
tokio-util = { version = "0.7.11" }
reqwest = { version = "0.11.22", features = ["json"] }
url = "2.5.0"
async-trait = "0.1.80"
dashmap = "5.5.3"
futures = "0.3.31"

# crypto
kzg = { package = "rust-kzg-zkcrypto", git = "https://github.com/smtmfft/rust-kzg.git", branch = "brecht/sp1-patch", default-features = false }
kzg_traits = { package = "kzg", git = "https://github.com/smtmfft/rust-kzg.git", branch = "brecht/sp1-patch", default-features = false }
sha3 = { version = "0.10", default-features = false }
sha2 = "0.10.8"
secp256k1 = { version = "0.29", default-features = false, features = [
    "global-context",
    "recovery",
] }

# macro
syn = { version = "2.0.68", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Error model
anyhow = "1.0"
thiserror = "1.0"
thiserror-no-std = "2.0.2"

# redis
redis = { version = "=0.27.3" }

# misc
hashbrown = { version = "0.14", features = ["inline-more"] }
tempfile = "3.8"
cargo_metadata = "0.18.1"
clap = { version = "4.4.6", features = ["derive", "string", "env"] }
lru = "0.13.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"
proptest = "1.4.0"
cfg-if = "1.0.0"
chrono = { version = "0.4", default-features = false }
assert_cmd = "2.0"
regex = "1.5.4"
rstest = "0.21"
rand = "0.8.5"
rand_core = "0.6.4"
dirs = "5.0.1"
pathdiff = "0.2.1"
dotenv = "0.15.0"
backoff = "0.4.0"
derive-getters = "0.5.0"
test-log = "0.2.16"
pretty_assertions = "1.4.1"
serial_test = "2"

[patch.crates-io]
revm = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko-shasta" }
revm-primitives = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko-shasta" }
revm-precompile = { git = "https://github.com/taikoxyz/revm.git", branch = "v36-taiko-shasta" }
secp256k1 = { git = "https://github.com/smtmfft/rust-secp256k1", branch = "sp1-patch" }
blst = { git = "https://github.com/smtmfft/blst.git", branch = "v0.3.15-serialize" }
alloy-serde = { git = "https://github.com/taikoxyz/alloy.git", branch = "v0.1.4-patch" }
alloy-rpc-types-eth = { git = "https://github.com/taikoxyz/alloy.git", branch = "v0.1.4-patch" }
alloy-network = { git = "https://github.com/taikoxyz/alloy.git", branch = "v0.1.4-patch" }
alloy-signer-local = { git = "https://github.com/taikoxyz/alloy.git", branch = "v0.1.4-patch" }
alloy-signer = { git = "https://github.com/taikoxyz/alloy.git", branch = "v0.1.4-patch" }
alloy-rpc-types-beacon = { git = "https://github.com/taikoxyz/alloy.git", branch = "v0.1.4-patch" }
alloy-eips = { git = "https://github.com/taikoxyz/alloy.git", branch = "v0.1.4-patch" }
