[package]
name = "raiko-core"
version = "0.1.0"
edition = "2021"

[dependencies]

# provers
sp1-driver = { path = "../provers/sp1/driver", optional = true }
risc0-driver = { path = "../provers/risc0/driver", optional = true }
sgx-prover = { path = "../provers/sgx/prover", optional = true }

# raiko
raiko-lib = { workspace = true }

# reth
reth-primitives = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-evm = { workspace = true }
reth-revm = { workspace = true }
reth-provider = { workspace = true }

# alloy
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-provider = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }
alloy-rpc-client = { workspace = true }

# tracing and logging
tracing = { workspace = true }
bincode = { workspace = true }

# errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

# c-kzg
kzg = { workspace = true }
kzg_traits = { workspace = true }

# async
tokio = { workspace = true }
reqwest = { workspace = true }
reqwest_alloy = { workspace = true }
futures =  { workspace = true }

# docs
utoipa = { workspace = true }

# cli
clap = { workspace = true }

# db cache
lazy_static = { workspace = true }
lru = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
rstest = { workspace = true }
ethers-core = { workspace = true }
env_logger = { workspace = true }
serial_test = { workspace = true }

[features]
default = ["statedb_lru"]
# powdr = ["dep:powdr"]
sp1 = ["dep:sp1-driver", "sp1-driver/enable"]
risc0 = ["dep:risc0-driver", "risc0-driver/enable"]
sgx = ["dep:sgx-prover", "sgx-prover/enable"]
statedb_lru = []
