[package]
name = "raiko-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }

# errors
anyhow = { workspace = true }
thiserror-no-std = { workspace = true }
thiserror = { workspace = true, optional = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

# revm
revm = { workspace = true }
revm-primitives = { workspace = true }

libflate = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
# c-kzg = { workspace = true }
rust-kzg-zkcrypto = { workspace = true }
kzg = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
rlp = { workspace = true, features = ["std"] }

# misc
cfg-if = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }

# [target.'cfg(feature = "std")'.dependencies]
flate2 = { workspace = true, optional = true }
log = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
lazy_static = { workspace = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["std", "kzg-zkcrypto"]
std = [
  # always use no-std for revm since we use hashbrown in workspace
  # "revm/std",
  "dep:thiserror",
  "anyhow/std",
  "dep:chrono",
  "dep:flate2",
  "dep:log",
  "dep:serde_json",
  "dep:serde_with",
  # "dep:tokio",
]
tracer = ["revm/serde-json"]
sgx = []
sp1 = []
risc0 = []
kzg = ["revm-primitives/kzg", "dep:tempfile"]
kzg-zkcrypto = []