[package]
name = "raiko-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# reth
reth-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-evm = { workspace = true }
reth-chainspec = { workspace = true }
reth-revm = { workspace = true }

# revm
revm = { workspace = true }


# alloy
alloy-rlp = { workspace = true }
alloy-eips = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-consensus = { workspace = true, features = ["crypto-backend"] }
alloy-chains = { workspace = true }

# Crypto deps (re-exported for guest crate)
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

# errors
anyhow = { workspace = true }
thiserror-no-std = { workspace = true }
thiserror = { workspace = true, optional = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

libflate = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
bls12_381 = { workspace = true }
base64 = { workspace = true }
kzg = { workspace = true }
kzg_traits = { workspace = true }
sha2 = { workspace = true }
rlp = { workspace = true, features = ["std"] }

# docs
utoipa = { workspace = true }

# misc
cfg-if = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
pretty_assertions = { workspace = true }
rkyv = { workspace = true }

# [target.'cfg(feature = "std")'.dependencies]
flate2 = { workspace = true, optional = true }
log = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
lazy_static = { workspace = true }

reth-ethereum-consensus = { workspace = true }
reth-storage-api = { workspace = true }
reth-consensus = { workspace = true }
reth-consensus-common = { workspace = true }

alethia-reth-consensus = { workspace = true }
alethia-reth-evm = { workspace = true }
alethia-reth-chainspec = { workspace = true }
alethia-reth-block = { workspace = true }
alethia-reth-primitives = { workspace = true, features = ["serde"] }


[dev-dependencies]
hex-literal = { workspace = true }

[build-dependencies]
rkyv = { workspace = true }
kzg_traits = { workspace = true }
kzg = { workspace = true }

[features]
default = ["std"]
std = [
  # always use no-std for revm since we use hashbrown in workspace
  # "revm/std",
  "dep:thiserror",
  "anyhow/std",
  "dep:chrono",
  "dep:flate2",
  "dep:log",
  "dep:serde_json",
  "dep:serde_with",
  # "dep:tokio",
]
sgx = []
sp1 = []
risc0 = []
zisk = []
sp1-cycle-tracker = []
preflight = ["alethia-reth-block/prover"]
