[package]
name = "raiko-mock-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
