[package]
name = "raiko-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cargo_metadata = { workspace = true}
chrono = { workwpace = true }
cfg-if = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
risc0-binfmt = { workspace = true, optional = true }

[features]
default = ["risc0", "sp1"]
risc0 = ["dep:risc0-binfmt"]
sp1 = []
harness = []
