[package]
name = "raiko-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cargo_metadata = { workspace = true }
chrono = { workspace = true }
cfg-if = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
risc0-binfmt = { workspace = true, optional = true }
risc0-zkos-v1compat = { workspace = true, optional = true }
pathdiff = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
sp1-sdk = { workspace = true, optional = true }

[features]
risc0 = ["dep:risc0-binfmt", "dep:pathdiff", "dep:hex", "dep:risc0-zkos-v1compat"]
sp1 = ["dep:sp1-sdk"]
