[package]
name = "raiko-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-eips = { workspace = true }
anyhow = { version = "1.0", default-features = false }
bytes = { version = "1.5", default-features = false }
k256 = { version = "^0.13.3", features = ["ecdsa"], default_features = false }
hashbrown = { workspace = true }
sha2 = { version = "0.10.7", optional = true }
tempfile = { workspace = true, optional = true }

revm-primitives = { workspace = true, default-features = false }
rlp = { version = "0.5.2", default-features = false }
serde = { workspace = true }
sha3 = { version = "0.10", default-features = false}
thiserror = "1.0"

once_cell = { version = "1.18.0", default-features = false, features = ["critical-section"], optional = true }
hex = { version = "0.4",  default-features = false}
ruint = { version = "1.10", default-features = false }

# for eip-4844
c-kzg = { workspace = true, features = ["serde"], optional = true }

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = { version = "1.0", default-features = false }

[features]
std = ["anyhow/std", "rlp/std"]
taiko = ["revm-primitives/taiko"]
c-kzg = ["dep:c-kzg", "revm-primitives/c-kzg", "dep:sha2", "dep:tempfile", "dep:once_cell"]